--- a/SirGuessALot.html
+++ b/SirGuessALot.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Sir Guess A Lot</title>
+        <title>Sir Guesss A Lot</title>
     </head>
     
     <script>
