--- a/Space_invaders.html
+++ b/Space_invaders.html
@@ -11,8 +11,9 @@
 		</style>
 		
 		<!-- Import external scripts -->
-			<script src="arrays.js"></script>
+			<script src="arrays+.js"></script>
 			<script src="vectors.js"></script>
+			<script src="object+.js"></script>
 		<!-- -->
 		
     </head>
