--- a/Space_invaders.html
+++ b/Space_invaders.html
@@ -6,6 +6,9 @@
 			canvas{
 				border: solid;
 				background-color: black;
+				display: block;
+				margin-left: auto;
+				margin-right: auto;
 			}
 		</style>
 		
@@ -53,9 +56,9 @@
 		
 		// the levels
 		var enemyLevelClusters = [// level 1
-							 [[1,1,1,1,1,1,1,1],
+							 [[0,0,0,0,0,0,0,0],
 							  [1,0,0,1,1,0,0,1],
-							  [1,0,0,1,1,0,0,1],
+							  [1,1,1,1,1,1,1,1],
 							  [1,1,1,0,0,1,1,1],
 							  [1,0,0,0,0,0,0,1],
 							  [1,0,0,0,0,0,0,1],
@@ -63,7 +66,7 @@
 							  [1,1,1,1,1,1,1,1]],
 							 
 							 // level 2
-							 [[1,1,1,1,1,1,1,1],
+							 [[0,0,0,0,0,0,0,0],
 							  [1,0,0,1,1,0,0,1],
 							  [1,0,0,1,1,0,0,1],
 							  [1,1,1,0,0,1,1,1],
